// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<image> demo: > render [basic] correctly 1`] = `
<div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`<image> demo: > render [caption] correctly 1`] = `
<div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;" title="A user’s avatar">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
<div class="sd-image sd-image-with-footer-outer sd:ml-[67px] sd:align-top" style="width: 200px;"><img class="sd-image-img" style="width: 200px;" title="A user’s avatar">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`<image> demo: > render [component-preview] correctly 1`] = `
<button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click me to preview image
</button>
<!--teleport start-->
<!--teleport end-->
`;

exports[`<image> demo: > render [component-preview-group] correctly 1`] = `
<button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click me to preview multiple image
</button>
<!--teleport start-->
<!--teleport end-->
`;

exports[`<image> demo: > render [custom-preview-actions] correctly 1`] = `
<div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`<image> demo: > render [error] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 20px; row-gap: 20px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-image sd-image-with-footer-inner" style="width: 400px; height: 300px;"><img class="sd-image-img" style="width: 400px; height: 300px;">
      <div class="sd-image-overlay">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-image sd-image-with-footer-inner" style="width: 400px; height: 300px;"><img class="sd-image-img" style="width: 400px; height: 300px;" alt="This is a picture of humans eating ice cream. The humans on the screen are very happy just now. The ice cream is green, it seems to be flavored with matcha. The gender of the human is unknown. It has very long hair and the human hair is brown.">
      <div class="sd-image-overlay">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`<image> demo: > render [extra] correctly 1`] = `
<div data-v-12f2eb6f="" class="sd-image sd-image-with-footer-inner sd:mr-[67px] sd:align-top" style="width: 260px;"><img class="sd-image-img" style="width: 260px;" title="A user’s avatar">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
<div data-v-12f2eb6f="" class="sd-image sd-image-with-footer-outer" style="width: 260px;"><img class="sd-image-img" style="width: 260px;" title="A user’s avatar">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`<image> demo: > render [loader] correctly 1`] = `
<div data-v-27935e85=""><button data-v-27935e85="" class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:mb-5" type="button">
    <!--v-if--> reload
  </button></div>
<div data-v-27935e85="" class="sd-image sd-image-with-footer-inner" style="width: 200px; height: 200px;"><img class="sd-image-img" style="width: 200px; height: 200px;">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
<div data-v-27935e85="" class="sd-image sd-image-with-footer-inner sd:ml-[67px]" style="width: 200px; height: 200px;"><img class="sd-image-img" style="width: 200px; height: 200px;">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`<image> demo: > render [preview-group] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;">
      <div class="sd-image-overlay">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;">
      <div class="sd-image-overlay">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;">
      <div class="sd-image-overlay">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;">
      <div class="sd-image-overlay">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`<image> demo: > render [preview-popup-container] correctly 1`] = `
<div id="image-demo-preview-popup-container" class="sd:relative sd:h-100 sd:w-full sd:overflow-hidden sd:bg-(--color-fill-2) sd:text-center sd:leading-100">
  <div class="sd-image sd-image-with-footer-inner" style="width: 200px;"><img class="sd-image-img" style="width: 200px;">
    <div class="sd-image-overlay">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`<image> demo: > render [progressive-loader] correctly 1`] = `
<div><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd:mb-5" type="button">
    <!--v-if--> reload
  </button></div>
<div class="sd-image sd-image-with-footer-inner" style="width: 200px; height: 200px;"><img class="sd-image-img" style="width: 200px; height: 200px;">
  <div class="sd-image-overlay">
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
</div>
`;
